--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/addmeds">Buy medicines</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">Sales</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/dispose">Dispose</a></li>
                             <li class="nav-item"><a class="nav-link" href="/addmoney">Add money</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
