--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     </form>
                     {% else %}
                     <form action="/sell" method="post">
-                        <input name="sellid" type="hidden" value="{{ ele.id }}">
+                        <input name="medid" type="hidden" value="{{ ele.id }}">
                         <button type="submit" class="btn btn-success">Sell</button>
                     </form>
                     {% endif %}
