--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,9 +32,8 @@
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/addmeds">Buy medicines</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/dispose">Dispose</a></li>
                             <li class="nav-item"><a class="nav-link" href="/addmoney">Add money</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/history">log book</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/changepwd">Change password</a></li>
