Added logbook page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+<!-- Some of part of the code has been adapted from cs50 
+Finance pset https://cs50.harvard.edu/x/psets/9/finance/ -->
+
 {% extends "layout.html" %}
 
 {% block title %}
@@ -5,11 +8,12 @@
 {% endblock %}
 
 {% block main %}
+    <br>
     <!-- The status legend(only the below divsion) has been adapted using chatgpt.com  -->
     <div class="row mb-4">
     <!-- LEFT: Status Legend -->
     <div class="col-md-4">
-        <div class="card bg-dark border-secondary">
+        <div class="card bg-light border-secondary">
             <div class="card-body">
                 <h6 class="card-title mb-3">Status Legend</h6>
 
