--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,5 @@
+<!-- Some of part of the code has been adapted from cs50 
+Finance pset https://cs50.harvard.edu/x/psets/9/finance/ -->
 <!DOCTYPE html>
 
 <html lang="en">
@@ -33,7 +35,7 @@
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/addmeds">Buy medicines</a></li>
                             <li class="nav-item"><a class="nav-link" href="/addmoney">Add money</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">log book</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logbook">log book</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/changepwd">Change password</a></li>
