--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,19 @@ Finance pset https://cs50.harvard.edu/x/psets/9/finance/ -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-        <link href="/static/capsules.png" rel="icon">
+    <!-- Adpated from favicon for favicon.io -->
+    <link rel="apple-touch-icon" sizes="180x180"
+      href="{{ url_for('static', filename='apple-touch-icon.png') }}">
+
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="{{ url_for('static', filename='favicon-32x32.png') }}">
+
+    <link rel="icon" type="image/png" sizes="16x16"
+      href="{{ url_for('static', filename='favicon-16x16.png') }}">
+
+    <link rel="manifest"
+      href="{{ url_for('static', filename='site.webmanifest') }}">
+
 
         <link href="/static/styles.css" rel="stylesheet">
 
