Added create new account button on login page and updated readme

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@ Finance pset https://cs50.harvard.edu/x/psets/9/finance/ -->
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/register">Create new account</a></li>
                             <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
                         </ul>
                     {% endif %}
