--- a/templates/login.html
+++ b/templates/login.html
@@ -14,4 +14,6 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+    <br>
+    <a href="/register"><button type="button" class="btn btn-success">Create new account</button></a>
 {% endblock %}
